--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.9",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "cross-env": "^7.0.3",
     "expo": "52.0.33",
     "expo-blur": "^14.0.3",
+    "expo-camera": "~16.0.16",
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
@@ -35,6 +37,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
+    "react-native-tesseract-ocr": "^2.0.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5"
