feat: add Tailwind CSS integration and add react-native-reusable components

--- a/package.json
+++ b/package.json
@@ -13,6 +13,25 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@rn-primitives/accordion": "^1.1.0",
+    "@rn-primitives/avatar": "^1.1.0",
+    "@rn-primitives/checkbox": "^1.1.0",
+    "@rn-primitives/dialog": "^1.1.0",
+    "@rn-primitives/dropdown-menu": "^1.1.0",
+    "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/navigation-menu": "^1.1.0",
+    "@rn-primitives/popover": "^1.1.0",
+    "@rn-primitives/portal": "^1.1.0",
+    "@rn-primitives/progress": "^1.1.0",
+    "@rn-primitives/radio-group": "^1.1.0",
+    "@rn-primitives/slider": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/toggle": "^1.1.0",
+    "@rn-primitives/toggle-group": "^1.1.0",
+    "@rn-primitives/tooltip": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "expo": "52.0.33",
     "expo-blur": "^14.0.3",
@@ -29,6 +48,8 @@
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
     "expo-web-browser": "^14.0.2",
+    "lucide-react-native": "^0.475.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -40,7 +61,10 @@
     "react-native-tesseract-ocr": "^2.0.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
