--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
+    "expo-navigation-bar": "~4.0.8",
     "expo-router": "4.0.17",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "^2.0.1",
@@ -53,6 +54,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "^2.23.0",
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "^3.16.7",
