--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@rn-primitives/tooltip": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@supabase/supabase-js": "^2.48.1",
+    "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -39,8 +40,10 @@
     "expo-blur": "^14.0.3",
     "expo-camera": "~16.0.16",
     "expo-constants": "^17.0.5",
+    "expo-file-system": "~18.0.10",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
+    "expo-image": "~2.0.5",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
