--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env EXPO_NO_TELEMETRY=1 expo start",
+    "start": "cross-env EXPO_NO_TELEMETRY=1 expo start",
+    "dev": "cross-env EXPO_NO_TELEMETRY=1 expo run android --device",
     "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.9",
@@ -47,6 +50,8 @@
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
+    "expo-location": "~18.0.6",
+    "expo-maps": "0.7.3",
     "expo-navigation-bar": "~4.0.8",
     "expo-router": "4.0.17",
     "expo-secure-store": "~14.0.1",
