feat: update app.json for Android build properties and add prebuild script in package.json

--- a/app.json
+++ b/app.json
@@ -30,6 +30,14 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+  
+          }
+        }
       ]
     ],
     "experiments": {
