--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "start": "cross-env EXPO_NO_TELEMETRY=1 expo start",
+    "prebuild": "cross-env expo prebuild --platform android --clean",
     "dev": "cross-env EXPO_NO_TELEMETRY=1 expo run android --device",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
@@ -39,8 +40,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "expo": "52.0.33",
+    "expo": "52.0.18",
     "expo-blur": "^14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-camera": "~16.0.16",
     "expo-constants": "^17.0.5",
     "expo-file-system": "~18.0.10",
@@ -51,7 +53,6 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-location": "~18.0.6",
-    "expo-maps": "0.7.3",
     "expo-navigation-bar": "~4.0.8",
     "expo-router": "4.0.17",
     "expo-secure-store": "~14.0.1",
@@ -64,14 +65,13 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
-    "react-native-gesture-handler": "^2.23.0",
-    "react-native-maps": "1.10.0",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-tesseract-ocr": "^2.0.3",
+    "react-native-screens": "^4.6.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
