--- a/app.json
+++ b/app.json
@@ -42,6 +42,11 @@
       "typedRoutes": true
     },
     "android": {
+      "config": {
+        "googleMaps": {
+          "apiKey": "FILL_ME_IN"
+        }
+      },
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_COARSE_LOCATION",
