--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.9",
     "@expo/vector-icons": "^14.0.2",
+    "@mgcrea/react-native-dnd": "^2.5.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
