--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "ios": "expo run:ios",
     "lint": "expo lint",
     "prebuild": "cross-env expo prebuild --platform android --clean",
-    "start": "cross-env EXPO_NO_TELEMETRY=1 expo start"
+    "start": "cross-env EXPO_NO_TELEMETRY=1 expo start",
+    "test": "vitest"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.1.14",
+    "@ai-sdk/react": "^1.1.16",
     "@babel/runtime": "^7.26.9",
     "@expo/vector-icons": "^14.0.2",
     "@mgcrea/react-native-dnd": "^2.5.3",
@@ -38,6 +41,7 @@
     "@rn-primitives/tooltip": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@supabase/supabase-js": "^2.48.1",
+    "ai": "^4.1.41",
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -83,11 +87,14 @@
     "react-native-webview": "13.12.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.0.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
