--- a/app.json
+++ b/app.json
@@ -58,7 +58,9 @@
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION"
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.FOREGROUND_SERVICE_LOCATION"
       ],
       "package": "com.laliaoperative.wayfarer"
     },
@@ -67,7 +69,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "baf709a4-3453-4adb-92e7-b23e6bc11f86"
+        "projectId": "2640f94f-9aab-4742-ab2c-879448370f65"
       }
     }
   }
