--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "android": "expo run:android",
-    "build:dev": "eas build --profile development --platform android --local",
+    "build:dev": "eas build --profile development --platform android",
     "build:web": "expo export --platform web",
     "dev": "cross-env EXPO_NO_TELEMETRY=1 expo run android --device",
     "ios": "expo run:ios",
